tests/type_errors/maximum_variant.nos
# expect: Red
# Variants auto-derive Ord (alphabetical by constructor name)
type Color = Red | Green | Blue
main() = [Red, Green, Blue].maximum()
